--- a/Basic/task9/index.html
+++ b/Basic/task9/index.html
@@ -259,12 +259,12 @@
 					<h3>ENJOY YOUR LIFE</h3>
 					<p>Great Web UI kit for designers,<br>
 					freelancers or business.</p>
-					<a href =  "#"><img src = "./images/twitter-icon.png"></a>
-					<a href =  "#"><img src = "./images/facebook-icon.png"></a>
-					<a href =  "#"><img src = "./images/google-icon.png"></a>
-					<a href =  "#"><img src = "./images/tumbler-icon.png"></a>
-					<a href =  "#"><img src = "./images/pinterest-icon.png"></a>
-					<a href =  "#"><img src = "./images/linkedin-icon.png"></a>
+					<a href =  "#"><img src = "./images/Twitter-Icon.png"></a>
+					<a href =  "#"><img src = "./images/Facebook-Icon.png"></a>
+					<a href =  "#"><img src = "./images/Google-Icon.png"></a>
+					<a href =  "#"><img src = "./images/Tumbler-Icon.png"></a>
+					<a href =  "#"><img src = "./images/Pinterest-Icon.png"></a>
+					<a href =  "#"><img src = "./images/Linkedin-Icon.png"></a>
 				</div>
 			</div>
 		</footer>
