--- a/Basic/task9/index.html
+++ b/Basic/task9/index.html
@@ -55,7 +55,7 @@
 					</p>
 				</div>
 				<div class = "wrap">
-					<img src = "./images/setting-icon.png" alt = "setting">
+					<img src = "./images/settings-icon.png" alt = "setting">
 					<h2>Customization</h2>
 					<p>Make any design your own using the Style<br>
 					Editor.Personalize fonts fonts, colors, and layouts to<br>
@@ -264,7 +264,7 @@
 					<a href =  "#"><img src = "./images/google-icon.png"></a>
 					<a href =  "#"><img src = "./images/tumbler-icon.png"></a>
 					<a href =  "#"><img src = "./images/pinterest-icon.png"></a>
-					<a href =  "#"><img src = "./images/linkedin-icon.png"></a>
+					<a href =  "#"><img src = "./images/linkin-icon.png"></a>
 				</div>
 			</div>
 		</footer>
