--- a/Basic/task9/index.html
+++ b/Basic/task9/index.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<header>
-			<img src = "./images/background-1.png" alt = "mountain">
-			<div id = "cover1"></div>
+			<div id = "background1"><img src = "./images/background-1.png" alt = "mountain">
+			<div id = "cover1"></div></div>
 			<form class = "title">
 				<h1>Hello World</h1>
 				<p>
