--- a/Basic/task19/index.html
+++ b/Basic/task19/index.html
@@ -185,9 +185,9 @@
 	+findListItem2("news-normal","CSS").length.toString();
 	var result8 = document.getElementById("result8");
 	result8.innerHTML = "id为news-top的section下,class为active的链接中包含的文字内容为"
-	+ getActiveLinkContent("news-top")
+	+ getActiveLinkContent2("news-top")
 	+ "<br>id为news-normal的section下,class为active的链接中包含的文字内容为"
-	+ getActiveLinkContent("news-normal");
+	+ getActiveLinkContent2("news-normal");
     </script>
 </body>
 </html>
