--- a/Basic/task20/index.html
+++ b/Basic/task20/index.html
@@ -21,6 +21,13 @@
 		#fade-obj {
 			transition:		1s all ease;
 		}
+		#figure {
+			width:			200px;
+			height:			200px;
+			background:		url('./erik.jpg') no-repeat;
+			background-position:	0px 0px;
+			background-size:100% ;
+		}
 	</style>
 	</head>
 <body>        
@@ -61,6 +68,7 @@
     <p class="color-picker"></p>
 	<div id="fade-obj" style="width:300px;height:300px;background:#000"></div>
 	<button id="fade-btn">淡出</button>
+	<div id = "figure"></div>
     <script>
 		var buttons = document.querySelectorAll("button");
 		var result1 = document.querySelector("#result1");
@@ -143,6 +151,21 @@
 				p.style.color = c;
 			}
 		}
+		var eriks = document.querySelector("#figure");
+		var y = 0;
+		var flag = true;
+		var code = function() {
+			if(y==-3200) {flag = false}
+			else if(y==0) {flag = true}
+			if(flag) {
+				eriks.style.backgroundPosition = "0px "+y+"px";
+				y -= 200;
+			} else {
+				eriks.style.backgroundPosition = "0px "+y+"px";
+				y += 200;
+			}			
+		}
+		setInterval(code,100);
     </script>
 </body>
 </html>
