--- a/Basic/task28/index.html
+++ b/Basic/task28/index.html
@@ -36,7 +36,7 @@
 	</head>
 <body> 
 	<div class = "wrapper">
-		<input id="email-input" type="text">
+		<input id="email-input" type="text" placeholder = "input your e-mail">
 		<ul id="email-sug-wrapper" class="email-sug"></ul>
 	</div>
     <script>
