--- a/Basic/task28/index.html
+++ b/Basic/task28/index.html
@@ -150,10 +150,7 @@
 	
 	function checkOver(arr,str) {
 		for(let i = 0 ; i < arr.length ; i++) {
-			<!-- if(str.indexOf('@'+arr[i])==0&&(str.length-1) > arr[i].length){ -->
-				<!-- return true; -->
-			<!-- } -->
-			if((('@'+arr[i]).indexOf(str) < 0&&(str.length-1) <= arr[i].length)||(str.indexOf('@'+arr[i])==0&&(str.length-1) > arr[i].length)) {
+			if(str.indexOf('@'+arr[i])==0&&(str.length-1) > arr[i].length){
 				return true;
 			}
 		}
